--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
     "@mui/styled-engine-sc": "^5.12.0",
-    "@mui/styles": "^5.13.2",
     "@mui/system": "^5.13.2",
     "@mui/types": "^7.2.4",
     "@mui/utils": "^5.13.1",
@@ -25,6 +24,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-virtualized": "^9.22.5",
     "styled-components": "^5.3.11",
     "web-vitals": "^2.1.4"
   },
